# demo

./: .gitignore  CMakeLists.txt  makefile
src/: acore.c  acore.h  adsr.c  adsr.h  context.c  context.h  heightmap.c  heightmap.h  main.c  vcore.c  vec.h  vrender.c  vrender.h
